ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report_Line_Item__c/Intelligence_Report_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Intelligence Report Line Item</label>
    <nameField>
        <displayFormat>IRLI-{000}</displayFormat>
        <label>Intelligence Report Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intelligence Report Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>