ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report_Line_Item__c/fields/Intelligence_Report__c.field-meta.xml
<CustomField>
    <fullName>Intelligence_Report__c</fullName>
    <label>Intelligence Report</label>
    <referenceTo>Intelligence_Report__c</referenceTo>
    <relationshipLabel>Intelligence Report Line Items</relationshipLabel>
    <relationshipName>Intelligence_Report_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>