ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report_Line_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Overview</fullName>
            </value>
            <value>
                <fullName>New Customer Activity</fullName>
            </value>
            <value>
                <fullName>Competitive Activity</fullName>
            </value>
            <value>
                <fullName>Design Community Activity</fullName>
            </value>
            <value>
                <fullName>Contractor Activity</fullName>
            </value>
            <value>
                <fullName>Competitive Market Activity</fullName>
            </value>
            <value>
                <fullName>Competitors Product Evaluation</fullName>
            </value>
            <value>
                <fullName>Target Account Info (Dealer/Roofer)</fullName>
            </value>
            <value>
                <fullName>Roofer Intel</fullName>
            </value>
            <value>
                <fullName>Dealer Intel</fullName>
            </value>
            <value>
                <fullName>IKO Product Intel</fullName>
            </value>
            <value>
                <fullName>Competitor Product Intel</fullName>
            </value>
            <value>
                <fullName>Recommendations</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Competitors Product Information</fullName>
                <isActive>false</isActive>
                <label>Competitors Product Information</label>
            </value>
            <value>
                <fullName>Product Quality Information</fullName>
                <isActive>false</isActive>
                <label>Product Quality Information</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>