ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report_Line_Item__c/recordTypes/Canadian_Commercial.recordType-meta.xml
<RecordType>
    <fullName>Canadian_Commercial</fullName>
    <active>true</active>
    <label>Canadian Commercial</label>
</RecordType>