ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report_Line_Item__c/validationRules/No_Changes_once_Submitted.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Changes_once_Submitted</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT( Intelligence_Report__r.Status__c ) = &quot;Submitted&quot;,
OR(
ISNEW(),
ISCHANGED( Details__c ),
ISCHANGED( Type__c)
)
)</errorConditionFormula>
    <errorMessage>Once an intelligence report has been submitted it cannot be changed, including any line item changes</errorMessage>
</ValidationRule>